--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "arjuna-frontend-ts",
+  "name": "base-frontend-ts",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -13,25 +13,62 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^2.1.7",
-    "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "@popperjs/core": "^2.11.8",
+    "@redtea/format-axios-error": "^2.1.1",
+    "@tsparticles/slim": "^3.8.1",
+    "@tsparticles/vue3": "^3.0.1",
+    "@types/aos": "^3.0.7",
+    "@types/bootstrap": "^5.2.10",
+    "@types/lodash": "^4.17.17",
+    "@types/sass-loader": "^8.0.9",
+    "@types/vue-cropperjs": "^4.1.6",
+    "@vueform/multiselect": "^2.6.11",
+    "@vueuse/core": "^13.3.0",
+    "aos": "^2.3.4",
+    "apexcharts": "^4.7.0",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
+    "feather-icons": "^4.29.2",
+    "jsbarcode": "^3.11.6",
+    "lottie-web": "^5.13.0",
+    "maska": "^3.1.1",
+    "moment": "^2.30.1",
+    "pinia": "^3.0.2",
+    "postcss": "^8.5.3",
+    "remixicon": "^4.6.0",
+    "simplebar-vue": "^2.4.1",
+    "sweetalert2": "^11.22.0",
+    "swiper": "^11.2.8",
+    "vee-validate": "^4.15.0",
+    "vue": "^3.5.15",
+    "vue-advanced-cropper": "^2.8.9",
+    "vue-cropperjs": "^5.0.0",
+    "vue-debounce": "^5.0.1",
+    "vue-feather": "^2.0.0",
+    "vue-flatpickr-component": "^12.0.0",
+    "vue-router": "^4.5.1",
+    "vue-to-print": "^1.4.0",
+    "vue3-apexcharts": "^1.8.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.8.0",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.14.5",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
-    "@vue/tsconfig": "^0.5.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.23.0",
-    "npm-run-all2": "^6.2.0",
-    "prettier": "^3.2.5",
-    "typescript": "~5.4.0",
-    "vite": "^5.3.1",
-    "vite-plugin-vue-devtools": "^7.3.1",
-    "vue-tsc": "^2.0.21"
+    "@rushstack/eslint-patch": "^1.11.0",
+    "@tsconfig/node20": "^20.1.5",
+    "@types/node": "^22.15.23",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitejs/plugin-vue-jsx": "^4.2.0",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.5.0",
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.27.0",
+    "eslint-plugin-vue": "^10.1.0",
+    "npm-run-all2": "^8.0.4",
+    "prettier": "^3.5.3",
+    "sass": "^1.89.0",
+    "typescript": "~5.8.3",
+    "vite": "^6.3.5",
+    "vite-plugin-vue-devtools": "^7.7.6",
+    "vue-tsc": "^2.2.10"
   }
 }
