update base vue ts

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 NODE_ENV='development'
-VITE_APP_ASSET_URL='https://yudhistira-backend.test'
-VITE_APP_BACKEND_URL='https://yudhistira-backend.test/app'
+VITE_APP_ASSET_URL='https://base-backend.test'
+VITE_APP_BACKEND_URL='https://base-backend.test/app'
+VITE_APP_NAME=Base Vue TS
 # VITE_APP_ASSET_URL='https://backend.yudhistira.genah.net'
 # VITE_APP_BACKEND_URL='https://backend.yudhistira.genah.net/app'
-VITE_APP_PANDAWA_API='https://pandawa.genahdc.net/api'
-VITE_APP_PANDAWA_TOKEN='fd41638fe977dd578e9cc41c25479513'
+# VITE_APP_PANDAWA_API='https://pandawa.genahdc.net/api'
+# VITE_APP_PANDAWA_TOKEN='fd41638fe977dd578e9cc41c25479513'
