--- a/package.json
+++ b/package.json
@@ -16,61 +16,63 @@
     "@ckeditor/ckeditor5-vue": "^7.3.0",
     "@popperjs/core": "^2.11.8",
     "@redtea/format-axios-error": "^2.1.1",
-    "@tsparticles/slim": "^3.8.1",
+    "@tsparticles/slim": "^3.9.1",
     "@tsparticles/vue3": "^3.0.1",
     "@types/aos": "^3.0.7",
     "@types/bootstrap": "^5.2.10",
-    "@types/lodash": "^4.17.17",
-    "@types/sass-loader": "^8.0.9",
+    "@types/lodash": "^4.17.21",
+    "@types/sass-loader": "^8.0.10",
     "@types/vue-cropperjs": "^4.1.6",
     "@vueform/multiselect": "^2.6.11",
-    "@vueuse/core": "^13.3.0",
+    "@vueuse/core": "^14.1.0",
     "aos": "^2.3.4",
-    "apexcharts": "^4.7.0",
-    "autoprefixer": "^10.4.21",
-    "axios": "^1.9.0",
-    "bootstrap": "^5.3.6",
-    "ckeditor5": "^45.1.0",
+    "apexcharts": "^5.3.6",
+    "autoprefixer": "^10.4.22",
+    "axios": "^1.13.2",
+    "bootstrap": "^5.3.8",
+    "ckeditor5": "^47.3.0",
     "feather-icons": "^4.29.2",
-    "jsbarcode": "^3.11.6",
+    "jsbarcode": "^3.12.1",
     "lottie-web": "^5.13.0",
-    "maska": "^3.1.1",
+    "maska": "^3.2.0",
     "moment": "^2.30.1",
-    "pinia": "^3.0.2",
-    "postcss": "^8.5.3",
-    "remixicon": "^4.6.0",
-    "simplebar-vue": "^2.4.1",
-    "sweetalert2": "^11.22.0",
-    "swiper": "^11.2.8",
-    "vee-validate": "^4.15.0",
-    "vue": "^3.5.15",
+    "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate-2": "^2.0.32",
+    "postcss": "^8.5.6",
+    "remixicon": "^4.7.0",
+    "simplebar-vue": "^2.4.2",
+    "sweetalert2": "^11.26.4",
+    "swiper": "^12.0.3",
+    "vee-validate": "^4.15.1",
+    "vue": "^3.5.25",
     "vue-advanced-cropper": "^2.8.9",
     "vue-cropperjs": "^5.0.0",
     "vue-debounce": "^5.0.1",
     "vue-feather": "^2.0.0",
     "vue-flatpickr-component": "^12.0.0",
-    "vue-router": "^4.5.1",
-    "vue-to-print": "^1.4.0",
-    "vue3-apexcharts": "^1.8.0",
-    "yup": "^1.6.1"
+    "vue-router": "^4.6.3",
+    "vue-to-print": "^1.5.1",
+    "vue3-apexcharts": "^1.10.0",
+    "vue3-colorpicker": "^2.3.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.11.0",
-    "@tsconfig/node20": "^20.1.5",
-    "@types/node": "^22.15.23",
-    "@vitejs/plugin-vue": "^5.2.4",
-    "@vitejs/plugin-vue-jsx": "^4.2.0",
+    "@rushstack/eslint-patch": "^1.15.0",
+    "@tsconfig/node20": "^20.1.8",
+    "@types/node": "^24.10.2",
+    "@vitejs/plugin-vue": "^6.0.2",
+    "@vitejs/plugin-vue-jsx": "^5.1.2",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.5.0",
-    "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.27.0",
-    "eslint-plugin-vue": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-vue": "^10.6.2",
     "npm-run-all2": "^8.0.4",
-    "prettier": "^3.5.3",
-    "sass": "^1.89.0",
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5",
-    "vite-plugin-vue-devtools": "^7.7.6",
-    "vue-tsc": "^2.2.10"
+    "prettier": "^3.7.4",
+    "sass": "^1.95.0",
+    "typescript": "~5.9.3",
+    "vite": "^7.2.7",
+    "vite-plugin-vue-devtools": "^8.0.5",
+    "vue-tsc": "^3.1.7"
   }
 }
