--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,9 @@
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "allowImportingTsExtensions": true,
+    "skipLibCheck": true,
+    "noEmitOnError": false,
+    "isolatedModules": true,
 
     "baseUrl": ".",
     "paths": {
